--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,13 +7,43 @@
 .button{
     color:#f7f9fc !important;
         margin-left: 18px !important;
-        padding:5px !important;
+        padding-top:2px !important;
+        padding-bottom:5px !important;
+
         text-decoration: none !important;
         font-weight: 500 !important;
         font-size: 20px !important;
       
 
 
+}
+.button1{
+        margin-left: -35px !important;
+        padding-top:2px !important;
+        padding-bottom:5px !important;
+        color:white !important;
+
+        text-decoration: none !important;
+        font-weight: 500 !important;
+        font-size: 20px !important;
+
+}
+.button1Drawer{
+    color:black !important;
+    margin-left: -35px !important;
+    padding-top:2px !important;
+    padding-bottom:5px !important;
+padding-left: 20px !important;
+    text-decoration: none !important;
+    font-weight: 700 !important;
+    font-size: 20px !important;
+}
+.DrawerName{
+    text-decoration: none !important;
+    color:#e22335 !important;
+    font-size: 27px !important;
+    font-style:oblique;
+    font-weight: bold !important;
 }
 .cartButton{
     padding-left:5px !important;
@@ -31,3 +61,10 @@
    margin-bottom: -6px !important;
 
 }
+.ButtonIconDrawer{
+    padding-left:5px !important;
+    color: black !important;
+   margin-bottom: -6px !important;
+
+}
+
